Fix header on smaller screens

--- a/dressup/static/style.css
+++ b/dressup/static/style.css
@@ -99,6 +99,17 @@ header {
   align-items: center;
 }
 
+@media (max-width: 480px) {
+  header {
+    flex-direction: column;
+    margin-bottom: -40px;
+  }
+
+  .logo {
+    margin-bottom: 10px;
+  }
+}
+
 main {
   padding-top: 20px;
   text-align: center;
